tests/bad/var_cannot_infer.ae
/// fail: Variable type cannot be inferred, specify explicitly

def main() {
    let x
}